# bitoxide

./: .gitignore  Cargo.toml  README.md  post_build.rs
bitburner_api/: Cargo.toml
bitburner_api/src/: extensions.rs  lib.rs  netscript.rs
bitburner_api/src/netscript/: arg_types.rs  port.rs  return_types.rs  running_script.rs  server.rs  shims.rs
bitburner_api/src/netscript/arg_types/: arg.rs  hgw_options.rs  port_data.rs  run_options.rs
hello/: Cargo.toml
hello/src/: lib.rs
runner/: Cargo.toml
runner/src/: lib.rs
script_lib/: Cargo.toml
script_lib/src/: batch.rs  f64_total.rs  find_servers.rs  lib.rs  run.rs  simple_channel.rs  thread_search.rs  weaken_all.rs
script_lib/src/run/: executor.rs  process.rs  reactor.rs  waker.rs
script_lib/src/simple_channel/: error.rs
src/: api.rs  lib.rs  main.rs  server_lib.rs
xtask/: Cargo.toml
xtask/src/: bindgen.rs  cli.rs  compile_wasm.rs  lib.rs  main.rs  post_build.rs  server.rs
xtask/src/server/: file_watcher.rs  rpc_types.rs  send_files.rs
