[package]
name = "bitoxide"
version = "0.1.0"
authors = ["F5XS", "AugSphere"]
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[workspace]
members = [
    "bitburner_api",
    "xtask",
    "hello",
]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
toml = "0.7"
tungstenite = "0.19"
notify = "6.1"
notify-debouncer-mini = "0.4"
ctrlc = "3.4"
futures = "0.3"
