[package]
name = "bitoxide"
version = "0.1.0"
authors = ["F5XS", "AugSphere"]
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[workspace]
members = [
    "bitburner_api",
    "xtask",
    "hello",
]

[dependencies]
serde_json = "1.0"
toml = "0.7"
notify-debouncer-mini = "0.4"
ctrlc = "3.4"
futures = "0.3"
async-std = "1.12"
async-tungstenite = "0.24"
