[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = { version = "0.3", features = ["Performance", "Window"] }
script_lib = {path = "../script_lib"}
bitburner_api = {path = "../bitburner_api"}
gloo-timers = { version = "0.3.0", features = ["futures"], default_features = false }
