[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
notify-debouncer-mini = "0.4"
ctrlc = "3.4"
futures = "0.3"
async-std = "1.12"
async-tungstenite = "0.24"
